codex-rs/tui/src/mcp/snapshots/codex_tui__mcp__manager_view__tests__mcp_manager_empty.snap
---
source: tui/src/mcp/manager_view.rs
expression: render_view(&view)
---
┌Configured MCP Servers─────────┐┌Details──────────────────────────────┐
│Name      Status     Command   ││Browse the workspace to add MCP      │
│Browse wo            Press Ente││servers.                             │
│                               ││Press Enter to open the file browser │
│                               ││or 'b' to browse directly.           │
│                               ││Codex will analyse the selected      │
│                               ││folder and pre-fill the wizard.      │
│                               ││                                     │
│                               ││Keys: ↑/↓ move  n new  f/b browse    │
│                               ││Enter select/edit  r reload  d delete│
│                               ││Esc close                            │
│                               ││                                     │
│                               ││                                     │
│                               ││                                     │
│                               ││                                     │
│                               ││                                     │
│                               ││                                     │
│                               ││                                     │
│                               ││                                     │
│                               ││                                     │
│                               ││                                     │
└───────────────────────────────┘└─────────────────────────────────────┘
